--- a/index.html
+++ b/index.html
@@ -94,6 +94,10 @@
     <main>
         <h2>Welcome to MyFame</h2>
         <p>This is the homepage of the MyFame project.</p>
+
+<a href="MyFameUsersGuide2025.pdf" download>Download the User Guide (PDF)</a>
+
+        
     </main>
 
     <footer>
