--- a/about.html
+++ b/about.html
@@ -61,6 +61,7 @@
             position: fixed;
             width: 100%;
             bottom: 0;
+            font-size: 10px; /* or try 0.8em or smaller */
         }
 
         @media (min-width: 600px) {
