--- a/index.html
+++ b/index.html
@@ -96,8 +96,15 @@
         <h2>Welcome to MyFame</h2>
         <p>This is the homepage of the MyFame project.</p>
 
+            <br>
 <a href="MyFameUsersGuide2025.pdf" download>Download the User Guide (PDF)</a>
 
+
+         <br>
+    <a href="mailto:eriksoeb@gmail.com?subject=fame">Contact Us About Fame</a>
+
+
+        
         
     </main>
 
