--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
         <br>
         <br>
 
-        <a href="mailto:eriksoeb@gmail.com?subject=fame">Contact Us About MyFame</a>
+        <a href="mailto:eriksoeb@gmail.com?subject=fame">Contact About MyFame</a>
 
        
         
