--- a/index.html
+++ b/index.html
@@ -108,6 +108,10 @@
 
         <a href="mailto:eriksoeb@gmail.com?subject=fame">Contact About MyFame</a>
 
+            <br>
+            <br>
+            <img src="fame.jpg" alt="Fame Project Image" width="400">
+
        
         
     </main>
