--- a/index.html
+++ b/index.html
@@ -88,6 +88,9 @@
         <div class="menu-toggle" onclick="toggleMenu()">☰</div>
         <nav id="menu">
             <a href="index.html">Home</a>
+            <a href="about.html">Background</a> <!-- Link to another page -->
+            <a href="about.html">Countries</a> <!-- Link to another page -->
+            <a href="about.html">Downloads</a> <!-- Link to another page -->
             <a href="about.html">About</a> <!-- Link to another page -->
         </nav>
     </header>
