--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
     </main>
 
     <footer>
-        &copy; 2025 MyFame Project
+        Erik &copy; 2025 MyFame Project
     </footer>
 
     <script>
