--- a/about.html
+++ b/about.html
@@ -97,7 +97,7 @@
         <h2>About MyFame</h2>
         <p>The MyFame project is designed to showcase your personal or project portfolio in a clean, simple web layout.</p>
         <p>Feel free to customize this page with more information about yourself, your team, or your mission.</p>
-          <p>Mde by Erik & and a friend </p>
+          <p>Made by Erik for demo purpose Aug 28 2005 </p>
     </main>
 
     <footer>
