--- a/about.html
+++ b/about.html
@@ -101,7 +101,7 @@
     </main>
 
     <footer>
-        &copy; 2025 MyFame Project
+        Erik &copy; 2025 MyFame Project
     </footer>
 
     <script>
