--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             position: absolute;
             top: 60px;
             right: 0;
-            width: 200px;
+            width: 100%;
             box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
         }
 
