--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
         header {
             background: #282c34;
-            color: white;
+            color: yellow;
             padding: 10px 20px;
             display: flex;
             justify-content: space-between;
