--- a/index.html
+++ b/index.html
@@ -48,6 +48,13 @@
             cursor: pointer;
         }
 
+    .menu {
+    display: flex;
+    justify-content: flex-end;
+}
+
+        
+
         main {
             padding: 20px;
             text-align: center;
