--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
         header {
             background: #282c34;
-            color: red;
+            color: darkred;
             padding: 10px 20px;
             display: flex;
             justify-content: space-between;
@@ -46,12 +46,11 @@
         .menu-toggle {
             font-size: 24px;
             cursor: pointer;
+                  display: flex;
+                    justify-content: flex-end;
         }
 
-    .menu {
-    display: flex;
-    justify-content: flex-end;
-}
+ 
 
         
 
