--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         }
 
         .logo {
-            font-size: 1.5em;
+            font-size: 1.0em;
         }
 
         nav {
@@ -90,7 +90,7 @@
 <body>
 
     <header>
-        <div class="logo">MyFame</div>
+       <!-- <div class="logo">MyFamenot needed </div>-->
         <div class="menu-toggle" onclick="toggleMenu()">☰</div>
         <nav id="menu">
             <a href="index.html">Home</a>
