--- a/index.html
+++ b/index.html
@@ -119,7 +119,8 @@
 
             <br>
             <br>
-            <img src="fame.jpg" alt="Fame Project Image" width="400">
+        <img src="fame.jpg" alt="Fame Project Image" style="width: 90%; max-width: 400px;">
+
 
        
         
