--- a/index.html
+++ b/index.html
@@ -121,7 +121,8 @@
             <br>
         <img src="fame.jpg" alt="Fame Project Image" style="width: 90%; max-width: 400px;">
 
-
+     <br>
+          <p>"Yes we can! "</p>
        
         
     </main>
