--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
         <img src="fame.jpg" alt="Fame Project Image" style="width: 90%; max-width: 400px;">
 
      <br>
-          <p>"Yes we can! "</p>
+          <p> Why make it too complicated ? "</p>
        
         
     </main>
