--- a/index.html
+++ b/index.html
@@ -122,8 +122,8 @@
         <img src="fame.jpg" alt="Fame Project Image" style="width: 90%; max-width: 400px;">
 
      <br>
-          <p> Why make it too complicated ? "</p>
-       
+
+        <p><em>"Why make it too complicated?"</em></p>
         
     </main>
 
