--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@
 <a href="MyFameUsersGuide2025.pdf" download>Download the User Guide (PDF)</a>
 
         <br>
+        <a href="MyFameUsersGuide2025.pdf" target="_blank">Open the User Guide (PDF)</a>
         <br>
         <br>
 
@@ -121,7 +122,7 @@
 
      <br>
 
-        <p><em>"Why make it too complicated?"</em></p>
+        <p><em>"I'm gonna live forever"</em></p>
         
     </main>
 
