--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 
     <main>
         <h2>Welcome to MyFame</h2>
-        <p>This is the homepage of the MyFame project.</p>
+        <p>A FAME4GL Grapichal User Interface</p>
 
         <br>
         <br>
@@ -126,7 +126,7 @@
     </main>
 
     <footer>
-        Erik &copy; 2025 MyFame Project
+        Erik &copy; 1994-2025 MyFame GUI
     </footer>
 
     <script>
