--- a/index.html
+++ b/index.html
@@ -93,7 +93,8 @@
        <!-- <div class="logo">MyFamenot needed </div>-->
         <div class="menu-toggle" onclick="toggleMenu()">☰</div>
         <nav id="menu">
-            <a href="index.html">Home</a>
+            <a href="index.html">MyFame</a>             
+            <a href="https://eriksoeb.github.io/getfamejsonapi/">Switch to GetFame</a>
 
         </nav>
     </header>
@@ -105,9 +106,12 @@
         <br>
         <br>
 
-        
-<a href="MyFameUsersGuide2025.pdf" download>Download the User Guide (PDF)</a>
 
+        <!-- Write your comments :
+            <a href="MyFameUsersGuide2025.pdf" download>Download the User Guide (PDF)</a>
+         -->
+
+        
         <br>
         <a href="MyFameUsersGuide2025.pdf" target="_blank">Open the User Guide (PDF)</a>
         <br>
