--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 
             <br>
             <br>
-        <img src="fame.jpg" alt="Fame Project Image" style="width: 90%; max-width: 400px;">
+        <img src="myfame.jpg" alt="Fame Project Image" style="width: 90%; max-width: 400px;">
 
      <br>
 
