--- a/index.html
+++ b/index.html
@@ -105,10 +105,10 @@
 
         <br>
         <br>
-        
-        <a href="https://github.com/eriksoeb/myfame/tree/main" target="_blank">View MyFame repository</a>
 
-        <!-- Write your comments :
+         <!-- 
+        <a href="https://github.com/eriksoeb/myfame/tree/main" target="_blank">View MyFame repository</a>
+        Write your comments :
             <a href="MyFameUsersGuide2025.pdf" download>Download the User Guide (PDF)</a>
          -->
 
