--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         <div class="menu-toggle" onclick="toggleMenu()">☰</div>
         <nav id="menu">
             <a href="index.html">MyFame</a>             
-            <a href="https://eriksoeb.github.io/getfamejsonapi/">Switch to GetFame</a>
+            <a href="../getfamejsonapi/">Switch to GetFame</a>
 
         </nav>
     </header>
